Fix spacing around dimmer buttons, track-number

--- a/Moo/play/static/album.css
+++ b/Moo/play/static/album.css
@@ -41,7 +41,7 @@ div#audio-table {
 #track-number {
     font-size: 1.1em;
     margin: 0;
-    margin-right: -4px;
+    /* margin-right: -4px; */
     padding: 0;
     padding: 0 2px;
     background-color: rgba(255,255,255,0.1);
